# modularization

modular/: AMRCore.patch  CMakeLists.txt  ChartsCore.patch  CommonCore.patch  CommonCoreTcl.patch  CommonDataModel.patch  CommonDataModel2.patch  CommonExecutionModel.patch  CommonMisc.patch  FiltersParallel.patch  FiltersStatistics.patch  GUISupport-MFC.patch  GUISupportMFC.patch  GUISupportQt.patch  GenerateVTKConfig.patch  GitAttributes.patch  IOCore.patch  IOExodus.patch  IOLSDyna.patch  IOMySQL.patch  IOMySQL2.patch  IONetCDF.patch  IOPostgreSQL.patch  IOPostgreSQL2.patch  IOSQL.patch  IOXML.patch  ImagingCore.patch  ParallelCore.patch  QtSQL.patch  RenderingContext2D.patch  RenderingCore.patch  RenderingFreetype.patch  RenderingOpenGL.patch  RenderingText.patch  RenderingVolume.patch  TestingIOSQL.patch  ThirdParty-Cosmo.patch  ThirdParty-VPIC.patch  ThirdParty-alglib.patch  ThirdParty-exodusII.patch  (+38 more)
modular/AMR/Core/: CMakeLists.txt  module.cmake
modular/CMake/: GenerateExportHeader.cmake  VTKConfig.cmake.in  VTKModuleAPI.cmake  VTKModuleInfo.cmake.in  VTKModuleMacros.cmake  VTKModuleTop.cmake  vtkCompilerExtras.cmake  vtkGroups.cmake  vtkJavaWrapping.cmake  vtkModular.cmake  vtkObjectFactory.cxx.in  vtkPythonWrapping.cmake  vtkTclWrapping.cmake  vtkWrapHierarchy.cmake  vtkWrapping.cmake
modular/Chemistry/Core/: module.cmake
modular/Common/ComputationalGeometry/: CMakeLists.txt  module.cmake
modular/Common/Core/: CMakeLists.txt  module.cmake  vtkAutoInit.h
modular/Common/Core/Testing/Cxx/: CMakeLists.txt
modular/Common/Core/Testing/Python/: CMakeLists.txt
modular/Common/DataModel/: CMakeLists.txt  module.cmake
modular/Common/DataModel/Testing/Cxx/: CMakeLists.txt
modular/Common/ExecutionModel/: CMakeLists.txt  module.cmake
modular/Common/ImplicitFunctions/: CMakeLists.txt  module.cmake
modular/Common/Math/: CMakeLists.txt  module.cmake
modular/Common/Math/Testing/Cxx/: CMakeLists.txt
modular/Common/Misc/: CMakeLists.txt  module.cmake
modular/Common/System/: CMakeLists.txt  module.cmake
modular/Common/Transforms/: CMakeLists.txt  module.cmake
modular/Examples/: CMakeLists.txt  ExampleKMeansStatistics.cxx
modular/Filtering/Statistics/: CMakeLists.txt  module.cmake
modular/Filters/Core/: CMakeLists.txt  module.cmake
modular/Filters/Extraction/: CMakeLists.txt  module.cmake
modular/Filters/General/: CMakeLists.txt  module.cmake
modular/Filters/Geometry/: CMakeLists.txt  module.cmake
modular/Filters/Hybrid/: CMakeLists.txt  module.cmake
modular/Filters/HyperOctree/: module.cmake
modular/Filters/Imaging/: CMakeLists.txt  module.cmake
modular/Filters/Modeling/: module.cmake
modular/Filters/Parallel/: CMakeLists.txt
modular/Filters/ParallelGeometry/: CMakeLists.txt  module.cmake
modular/Filters/ParallelImaging/: CMakeLists.txt  module.cmake
modular/Filters/ParallelStatistics/: CMakeLists.txt  module.cmake
modular/Filters/Programmable/: CMakeLists.txt  module.cmake
modular/Filters/ReebGraph/: CMakeLists.txt  module.cmake
modular/Filters/Sources/: CMakeLists.txt  module.cmake
modular/Filters/Statistics/: CMakeLists.txt  module.cmake
modular/Filters/Statistics/Testing/Cxx/: CMakeLists.txt
modular/Filters/StatisticsGnuR/: CMakeLists.txt  module.cmake
modular/Filters/Texture/: CMakeLists.txt  module.cmake
modular/Filters/Verdict/: module.cmake
modular/GUISupport/Qt/: CMakeLists.txt  module.cmake
modular/GUISupport/Qt/Testing/Cxx/: CMakeLists.txt
modular/GUISupport/QtOpenGL/: CMakeLists.txt
modular/GUISupport/QtSQL/: CMakeLists.txt
modular/GUISupport/QtWebkit/: CMakeLists.txt
modular/Geovis/Core/: CMakeLists.txt  module.cmake
modular/IO/Core/: CMakeLists.txt  module.cmake
modular/IO/Exodus/: CMakeLists.txt
modular/IO/Export/: CMakeLists.txt  module.cmake
modular/IO/Geometry/: CMakeLists.txt  module.cmake
modular/IO/Geometry/Testing/Cxx/: CMakeLists.txt
modular/IO/Image/: CMakeLists.txt  module.cmake
modular/IO/Import/: module.cmake
modular/IO/Infovis/: CMakeLists.txt  module.cmake
modular/IO/LSDyna/: CMakeLists.txt  module.cmake
modular/IO/MINC/: CMakeLists.txt
modular/IO/MySQL/: CMakeLists.txt  module.cmake
modular/IO/MySQL/Testing/Cxx/: CMakeLists.txt
modular/IO/NetCDF/: CMakeLists.txt  module.cmake
modular/IO/NetCDF/Testing/Cxx/: CMakeLists.txt
modular/IO/ODBC/: CMakeLists.txt  module.cmake
modular/IO/PLY/: module.cmake
modular/IO/Parallel/: CMakeLists.txt  module.cmake
modular/IO/ParallelExodus/: CMakeLists.txt  module.cmake
modular/IO/ParallelLSDyna/: CMakeLists.txt
modular/IO/ParallelMPI/: CMakeLists.txt  module.cmake
modular/IO/ParallelNetCDF/: CMakeLists.txt  module.cmake
modular/IO/PostgreSQL/: CMakeLists.txt  module.cmake
modular/IO/SQL/: CMakeLists.txt  module.cmake
modular/IO/SQL/Testing/Cxx/: CMakeLists.txt
modular/IO/XML/: CMakeLists.txt  module.cmake
modular/IO/XML/Testing/Cxx/: CMakeLists.txt
modular/Imaging/Color/: module.cmake
modular/Imaging/Core/: CMakeLists.txt  module.cmake
modular/Imaging/Fourier/: module.cmake
modular/Imaging/General/: CMakeLists.txt  module.cmake
modular/Imaging/Hybrid/: module.cmake
modular/Imaging/Math/: module.cmake
modular/Imaging/Morphological/: CMakeLists.txt  module.cmake
modular/Imaging/Sources/: module.cmake
modular/Imaging/Statistics/: module.cmake
modular/Imaging/Stencil/: module.cmake
modular/Infovis/Boost/: module.cmake
modular/Infovis/BoostGraphAlgorithms/: CMakeLists.txt  module.cmake
modular/Infovis/BoostGraphAlgorithms/Testing/Cxx/: CMakeLists.txt
modular/Infovis/Core/: CMakeLists.txt  module.cmake
modular/Infovis/Layout/: CMakeLists.txt  module.cmake
modular/Infovis/Parallel/: CMakeLists.txt  module.cmake
modular/Interaction/Style/: CMakeLists.txt  module.cmake
modular/Interaction/Widgets/: CMakeLists.txt  module.cmake
modular/Parallel/Core/: CMakeLists.txt  module.cmake
modular/Parallel/MPI/: CMakeLists.txt
modular/Rendering/Parallel/: CMakeLists.txt
modular/Utilities/MetaIO/: CMakeLists.txt  module.cmake
modular/Wrapping/: CMakeLists.txt
(+64 files in other folders)
