
# DataModel
set(Kit_SRCS
  vtkPoints2D.cxx
  vtkPoints2D.h
  vtkPoints.cxx
  vtkPoints.h
  vtkQuadratureSchemeDefinition.cxx
  vtkQuadratureSchemeDefinition.h
  vtkStructuredData.cxx
  vtkStructuredData.h
  vtkStructuredExtent.cxx
  vtkStructuredExtent.h
  vtkStructuredVisibilityConstraint.cxx
  vtkStructuredVisibilityConstraint.h
  vtkTensor.cxx
  vtkTensor.h
  vtkAbstractCellLocator.cxx
  vtkAbstractCellLocator.h
  vtkAbstractPointLocator.cxx
  vtkAbstractPointLocator.h
  vtkAdjacentVertexIterator.cxx
  vtkAdjacentVertexIterator.h
  vtkAMRBox.cxx
  vtkAMRBox.h
  vtkAnnotation.cxx
  vtkAnnotation.h
  vtkAnnotationLayers.cxx
  vtkAnnotationLayers.h
  vtkArrayData.cxx
  vtkArrayData.h
  vtkAttributesErrorMetric.cxx
  vtkAttributesErrorMetric.h
  vtkBiQuadraticQuad.cxx
  vtkBiQuadraticQuad.h
  vtkBiQuadraticQuadraticHexahedron.cxx
  vtkBiQuadraticQuadraticHexahedron.h
  vtkBiQuadraticQuadraticWedge.cxx
  vtkBiQuadraticQuadraticWedge.h
  vtkBiQuadraticTriangle.cxx
  vtkBiQuadraticTriangle.h
  vtkBSPCuts.cxx
  vtkBSPCuts.h
  vtkBSPIntersections.cxx
  vtkBSPIntersections.h
  vtkCell3D.cxx
  vtkCell3D.h
  vtkCellArray.cxx
  vtkCellArray.h
  vtkCell.cxx
  vtkCellData.cxx
  vtkCellData.h
  vtkCell.h
  vtkCellLinks.cxx
  vtkCellLinks.h
  vtkCellLocator.cxx
  vtkCellLocator.h
  vtkCellType.h
  vtkCellTypes.cxx
  vtkCellTypes.h
  vtkCompositeDataIterator.cxx
  vtkCompositeDataIterator.h
  vtkCompositeDataSet.cxx
  vtkCompositeDataSet.h
  vtkCompositeDataSetInternals.h
  vtkConvexPointSet.cxx
  vtkConvexPointSet.h
  vtkCubicLine.cxx
  vtkCubicLine.h
  vtkDataObjectCollection.cxx
  vtkDataObjectCollection.h
  vtkDataObject.cxx
  vtkDataObject.h
  vtkDataObjectTypes.cxx
  vtkDataObjectTypes.h
  vtkDataSetAttributes.cxx
  vtkDataSetAttributes.h
  vtkDataSetCollection.cxx
  vtkDataSetCollection.h
  vtkDataSet.cxx
  vtkDataSet.h
  vtkDirectedAcyclicGraph.cxx
  vtkDirectedAcyclicGraph.h
  vtkDirectedGraph.cxx
  vtkDirectedGraph.h
  vtkDistributedGraphHelper.cxx
  vtkDistributedGraphHelper.h
  vtkEdgeListIterator.cxx
  vtkEdgeListIterator.h
  vtkEmptyCell.cxx
  vtkEmptyCell.h
  vtkExplicitCell.cxx
  vtkExplicitCell.h
  vtkFieldData.cxx
  vtkFieldData.h
  vtkGenericAdaptorCell.cxx
  vtkGenericAdaptorCell.h
  vtkGenericAttributeCollection.cxx
  vtkGenericAttributeCollection.h
  vtkGenericAttribute.cxx
  vtkGenericAttribute.h
  vtkGenericCell.cxx
  vtkGenericCell.h
  vtkGenericCellIterator.cxx
  vtkGenericCellIterator.h
  vtkGenericCellTessellator.cxx
  vtkGenericCellTessellator.h
  vtkGenericDataSetAlgorithm.cxx
  vtkGenericDataSetAlgorithm.h
  vtkGenericDataSet.cxx
  vtkGenericDataSet.h
  vtkGenericEdgeTable.cxx
  vtkGenericEdgeTable.h
  vtkGenericInterpolatedVelocityField.cxx
  vtkGenericInterpolatedVelocityField.h
  vtkGenericPointIterator.cxx
  vtkGenericPointIterator.h
  vtkGenericSubdivisionErrorMetric.cxx
  vtkGenericSubdivisionErrorMetric.h
  vtkGeometricErrorMetric.cxx
  vtkGeometricErrorMetric.h
  vtkGraphAlgorithm.cxx
  vtkGraphAlgorithm.h
  vtkGraph.cxx
  vtkGraphEdge.cxx
  vtkGraphEdge.h
  vtkGraph.h
  vtkGraphInternals.cxx
  vtkGraphInternals.h
  vtkHexagonalPrism.cxx
  vtkHexagonalPrism.h
  vtkHexahedron.cxx
  vtkHexahedron.h
  vtkHierarchicalBoxDataIterator.cxx
  vtkHierarchicalBoxDataIterator.h
  vtkHierarchicalBoxDataSet.cxx
  vtkHierarchicalBoxDataSet.h
  vtkHyperOctreeCursor.cxx
  vtkHyperOctreeCursor.h
  vtkHyperOctree.cxx
  vtkHyperOctree.h
  vtkHyperOctreePointsGrabber.cxx
  vtkHyperOctreePointsGrabber.h
  vtkImageData.cxx
  vtkImageData.h
  vtkImageIterator.cxx
  vtkImageIterator.h
  vtkImageIterator.txx
  vtkImageProgressIterator.cxx
  vtkImageProgressIterator.h
  vtkImageProgressIterator.txx
  vtkImageToStructuredGrid.cxx
  vtkImageToStructuredGrid.h
  vtkImageToStructuredPoints.cxx
  vtkImageToStructuredPoints.h
  vtkIncrementalOctreeNode.cxx
  vtkIncrementalOctreeNode.h
  vtkIncrementalOctreePointLocator.cxx
  vtkIncrementalOctreePointLocator.h
  vtkIncrementalPointLocator.cxx
  vtkIncrementalPointLocator.h
  vtkInEdgeIterator.cxx
  vtkInEdgeIterator.h
  vtkKdNode.cxx
  vtkKdNode.h
  vtkKdTree.cxx
  vtkKdTree.h
  vtkKdTreePointLocator.cxx
  vtkKdTreePointLocator.h
  vtkLine.cxx
  vtkLine.h
  vtkLocator.cxx
  vtkLocator.h
  vtkMergePoints.cxx
  vtkMergePoints.h
  vtkMultiBlockDataSet.cxx
  vtkMultiBlockDataSet.h
  vtkMultiPieceDataSet.cxx
  vtkMultiPieceDataSet.h
  vtkMutableDirectedGraph.cxx
  vtkMutableDirectedGraph.h
  vtkMutableUndirectedGraph.cxx
  vtkMutableUndirectedGraph.h
  vtkNonLinearCell.cxx
  vtkNonLinearCell.h
  vtkNonMergingPointLocator.cxx
  vtkNonMergingPointLocator.h
  vtkOctreePointLocator.cxx
  vtkOctreePointLocator.h
  vtkOctreePointLocatorNode.cxx
  vtkOctreePointLocatorNode.h
  vtkOutEdgeIterator.cxx
  vtkOutEdgeIterator.h
  vtkPentagonalPrism.cxx
  vtkPentagonalPrism.h
  vtkPixel.cxx
  vtkPixel.h
  vtkPointData.cxx
  vtkPointData.h
  vtkPointLocator.cxx
  vtkPointLocator.h
  vtkPointSet.cxx
  vtkPointSet.h
  vtkPointsProjectedHull.cxx
  vtkPointsProjectedHull.h
  vtkPolyDataCollection.cxx
  vtkPolyDataCollection.h
  vtkPolyData.cxx
  vtkPolyData.h
  vtkPolygon.cxx
  vtkPolygon.h
  vtkPolyhedron.cxx
  vtkPolyhedron.h
  vtkPolyLine.cxx
  vtkPolyLine.h
  vtkPolyPlane.cxx
  vtkPolyVertex.cxx
  vtkPolyVertex.h
  vtkPyramid.cxx
  vtkPyramid.h
  vtkQuad.cxx
  vtkQuad.h
  vtkQuadraticEdge.cxx
  vtkQuadraticEdge.h
  vtkQuadraticHexahedron.cxx
  vtkQuadraticHexahedron.h
  vtkQuadraticLinearQuad.cxx
  vtkQuadraticLinearQuad.h
  vtkQuadraticLinearWedge.cxx
  vtkQuadraticLinearWedge.h
  vtkQuadraticPyramid.cxx
  vtkQuadraticPyramid.h
  vtkQuadraticQuad.cxx
  vtkQuadraticQuad.h
  vtkQuadraticTetra.cxx
  vtkQuadraticTetra.h
  vtkQuadraticTriangle.cxx
  vtkQuadraticTriangle.h
  vtkQuadraticWedge.cxx
  vtkQuadraticWedge.h
  vtkRectilinearGrid.cxx
  vtkRectilinearGrid.h
  vtkReebGraph.cxx
  vtkReebGraph.h
  vtkReebGraphSimplificationMetric.cxx
  vtkReebGraphSimplificationMetric.h
  vtkSimpleCellTessellator.cxx
  vtkSimpleCellTessellator.h
  vtkSmoothErrorMetric.cxx
  vtkSmoothErrorMetric.h
  vtkSpline.cxx
  vtkSpline.h
  vtkStructuredGrid.cxx
  vtkStructuredGrid.h
  vtkStructuredPointsCollection.cxx
  vtkStructuredPointsCollection.h
  vtkStructuredPoints.cxx
  vtkStructuredPoints.h
  vtkTable.cxx
  vtkTable.h
  vtkTemporalDataSet.cxx
  vtkTemporalDataSet.h
  vtkTetra.cxx
  vtkTetra.h
  vtkTreeBFSIterator.cxx
  vtkTreeBFSIterator.h
  vtkTree.cxx
  vtkTreeDFSIterator.cxx
  vtkTreeDFSIterator.h
  vtkTree.h
  vtkTriangle.cxx
  vtkTriangle.h
  vtkTriangleStrip.cxx
  vtkTriangleStrip.h
  vtkTriQuadraticHexahedron.cxx
  vtkTriQuadraticHexahedron.h
  vtkUndirectedGraph.cxx
  vtkUndirectedGraph.h
  vtkUniformGrid.cxx
  vtkUniformGrid.h
  vtkUnstructuredGrid.cxx
  vtkUnstructuredGrid.h
  vtkVertex.cxx
  vtkVertex.h
  vtkVertexListIterator.cxx
  vtkVertexListIterator.h
  vtkVoxel.cxx
  vtkVoxel.h
  vtkWedge.cxx
  vtkWedge.h
  )


# From ExecutionModel
set(Kit_SRCS
  ${Kit_SRCS}
  vtkExtentSplitter.cxx
  vtkExtentSplitter.h
  vtkExtentTranslator.cxx
  vtkExtentTranslator.h
  vtkOnePieceExtentTranslator.cxx
  vtkOnePieceExtentTranslator.h
  vtkTableExtentTranslator.cxx
  vtkTableExtentTranslator.h
  vtkAlgorithm.cxx
  vtkAlgorithm.h
  vtkAlgorithmOutput.cxx
  vtkAlgorithmOutput.h
  vtkAnnotationLayersAlgorithm.cxx
  vtkAnnotationLayersAlgorithm.h
  vtkArrayDataAlgorithm.cxx
  vtkArrayDataAlgorithm.h
  vtkCachedStreamingDemandDrivenPipeline.cxx
  vtkCachedStreamingDemandDrivenPipeline.h
  vtkCastToConcrete.cxx
  vtkCastToConcrete.h
  vtkCompositeDataPipeline.cxx
  vtkCompositeDataPipeline.h
  vtkCompositeDataSetAlgorithm.cxx
  vtkCompositeDataSetAlgorithm.h
  vtkComputingResources.cxx
  vtkComputingResources.h
  vtkDataObjectAlgorithm.cxx
  vtkDataObjectAlgorithm.h
  vtkDataObjectSource.cxx
  vtkDataObjectSource.h
  vtkDataSetAlgorithm.cxx
  vtkDataSetAlgorithm.h
  vtkDataSetSource.cxx
  vtkDataSetSource.h
  vtkDataSetToDataSetFilter.cxx
  vtkDataSetToDataSetFilter.h
  vtkDataSetToImageFilter.cxx
  vtkDataSetToImageFilter.h
  vtkDataSetToPolyDataFilter.cxx
  vtkDataSetToPolyDataFilter.h
  vtkDataSetToStructuredGridFilter.cxx
  vtkDataSetToStructuredGridFilter.h
  vtkDataSetToStructuredPointsFilter.cxx
  vtkDataSetToStructuredPointsFilter.h
  vtkDataSetToUnstructuredGridFilter.cxx
  vtkDataSetToUnstructuredGridFilter.h
  vtkDemandDrivenPipeline.cxx
  vtkDemandDrivenPipeline.h
  vtkDirectedGraphAlgorithm.cxx
  vtkDirectedGraphAlgorithm.h
  vtkExecutionScheduler.cxx
  vtkExecutionScheduler.h
  vtkExecutionSchedulerManager.cxx
  vtkExecutionSchedulerManager.h
  vtkExecutiveCollection.cxx
  vtkExecutiveCollection.h
  vtkExecutive.cxx
  vtkExecutive.h
  vtkFilteringInformationKeyManager.cxx
  vtkFilteringInformationKeyManager.h
  vtkHierarchicalBoxDataSetAlgorithm.cxx
  vtkHierarchicalBoxDataSetAlgorithm.h
  vtkHyperOctreeAlgorithm.cxx
  vtkHyperOctreeAlgorithm.h
  vtkImageAlgorithm.cxx
  vtkImageAlgorithm.h
  vtkImageInPlaceFilter.cxx
  vtkImageInPlaceFilter.h
  vtkImageMultipleInputFilter.cxx
  vtkImageMultipleInputFilter.h
  vtkImageMultipleInputOutputFilter.cxx
  vtkImageMultipleInputOutputFilter.h
  vtkImageSource.cxx
  vtkImageSource.h
  vtkImageToImageFilter.cxx
  vtkImageToImageFilter.h
  vtkImageTwoInputFilter.cxx
  vtkImageTwoInputFilter.h
  vtkInformationExecutivePortKey.cxx
  vtkInformationExecutivePortKey.h
  vtkInformationExecutivePortVectorKey.cxx
  vtkInformationExecutivePortVectorKey.h
  vtkMultiBlockDataSetAlgorithm.cxx
  vtkMultiBlockDataSetAlgorithm.h
  vtkPassInputTypeAlgorithm.cxx
  vtkPassInputTypeAlgorithm.h
  vtkPiecewiseFunctionAlgorithm.cxx
  vtkPiecewiseFunctionAlgorithm.h
  vtkPointSetAlgorithm.cxx
  vtkPointSetAlgorithm.h
  vtkPointSetSource.cxx
  vtkPointSetSource.h
  vtkPointSetToPointSetFilter.cxx
  vtkPointSetToPointSetFilter.h
  vtkPolyDataAlgorithm.cxx
  vtkPolyDataAlgorithm.h
  vtkPolyDataSource.cxx
  vtkPolyDataSource.h
  vtkPolyDataToPolyDataFilter.cxx
  vtkPolyDataToPolyDataFilter.h
  vtkProcessObject.cxx
  vtkProcessObject.h
  vtkRectilinearGridAlgorithm.cxx
  vtkRectilinearGridAlgorithm.h
  vtkRectilinearGridSource.cxx
  vtkRectilinearGridSource.h
  vtkRectilinearGridToPolyDataFilter.cxx
  vtkRectilinearGridToPolyDataFilter.h
  vtkSimpleImageToImageFilter.cxx
  vtkSimpleImageToImageFilter.h
  vtkSource.cxx
  vtkSource.h
  vtkStreamingDemandDrivenPipeline.cxx
  vtkStreamingDemandDrivenPipeline.h
  vtkStructuredGridAlgorithm.cxx
  vtkStructuredGridAlgorithm.h
  vtkStructuredGridSource.cxx
  vtkStructuredGridSource.h
  vtkStructuredGridToPolyDataFilter.cxx
  vtkStructuredGridToPolyDataFilter.h
  vtkStructuredGridToStructuredGridFilter.cxx
  vtkStructuredGridToStructuredGridFilter.h
  vtkStructuredPointsSource.cxx
  vtkStructuredPointsSource.h
  vtkStructuredPointsToPolyDataFilter.cxx
  vtkStructuredPointsToPolyDataFilter.h
  vtkStructuredPointsToStructuredPointsFilter.cxx
  vtkStructuredPointsToStructuredPointsFilter.h
  vtkStructuredPointsToUnstructuredGridFilter.cxx
  vtkStructuredPointsToUnstructuredGridFilter.h
  vtkTableAlgorithm.cxx
  vtkTableAlgorithm.h
  vtkTemporalDataSetAlgorithm.cxx
  vtkTemporalDataSetAlgorithm.h
  vtkThreadedImageAlgorithm.cxx
  vtkThreadedImageAlgorithm.h
  vtkThreadedStreamingPipeline.cxx
  vtkThreadedStreamingPipeline.h
  vtkTreeAlgorithm.cxx
  vtkTreeAlgorithm.h
  vtkTrivialProducer.cxx
  vtkTrivialProducer.h
  vtkUndirectedGraphAlgorithm.cxx
  vtkUndirectedGraphAlgorithm.h
  vtkUnstructuredGridAlgorithm.cxx
  vtkUnstructuredGridAlgorithm.h
  vtkUnstructuredGridSource.cxx
  vtkUnstructuredGridSource.h
  vtkUnstructuredGridToPolyDataFilter.cxx
  vtkUnstructuredGridToPolyDataFilter.h
  vtkUnstructuredGridToUnstructuredGridFilter.cxx
  vtkUnstructuredGridToUnstructuredGridFilter.h
  )

include_directories(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${VTK_SOURCE_DIR}/Common/Core
  ${VTK_SOURCE_DIR}/Common/ImplicitFunctions
  ${VTK_SOURCE_DIR}/Common/Math
  ${VTK_SOURCE_DIR}/Common/Misc
  ${VTK_SOURCE_DIR}/Common/System
  )

#SET_SOURCE_FILES_PROPERTIES(
#ABSTRACT
#)

#SET_SOURCE_FILES_PROPERTIES(
#  WRAP_EXCLUDE
#)

#SET_SOURCE_FILES_PROPERTIES(
#  PROPERTIES WRAP_SPECIAL 1
#)

add_library(vtkCommonDataModel ${Kit_SRCS})

target_link_libraries(vtkCommonDataModel vtkCommonCore vtkCommonSystem vtkCommonMath vtkCommonMisc vtkCommonImplicitFunctions)
